# fav-movies

./: .gitignore  .ruff.toml  README.md  alembic.ini  pyproject.toml  pytest.ini
envs/deploy/: Dockerfile.dockerignore  docker-compose.yml  example.env
envs/dev/: docker-compose.yml
envs/test/: docker-compose.yml
migrations/: env.py
migrations/versions/: 2024_11_06_0533-f8aa86bb0a97_initial_migration.py
src/: app.py  config.py
src/auth/: controllers.py  dependencies.py  enums.py  exceptions.py  models.py  routes.py  schemas.py
src/movies/: controllers.py  enums.py  exceptions.py  models.py  routes.py  schemas.py  utlis.py
src/shared/: database.py  datetime.py  environment.py  exc_responses.py  exceptions.py  schemas.py
tests/: conftest.py
